# clx

./: .gitignore  .pre-commit-config.yaml  .project  10min-clx.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  api.html  build.sh  docker-compose.yml  genindex.html  index.html  intro-clx-dga.html  intro-clx-dga.ipynb  intro-clx-workflow.html  objects.inv  py-modindex.html  pyproject.toml  sample_text_no_empty_lines.txt  search.html  searchindex.js  setup.py  train_rnn_classifier.py
.github/: CODEOWNERS  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  submit_question.md
_static/: documentation_options.js
ci/checks/: changelog.sh  style.sh
ci/cpu/: build.sh  prebuild.sh  upload-anaconda.sh  upload.sh
ci/cpu/clx/: build_clx.sh  (+1 more)
ci/docs/: build.sh
ci/gpu/: build.sh  test-notebooks.sh
ci/integration_tests/: Dockerfile.test  README.md  docker-compose.test.yml  run_integration_test.py
ci/local/: README.md  build.sh
ci/release/: update-version.sh
ci/utils/: nbtestlog2junitxml.py
clx/: ip.py  ml.py  mlstats.py  pytest.ini
clx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clx/analytics/: cybert.py  detector.py  detector_dataset.py  detector_utils.py  dga_detector.py  phishing_detector.py  stats.py
clx/dns/: dns_extractor.py
clx/heuristics/: ports.py
clx/ml/: detector.py  dga_detector.py
clx/osi/: farsight.py  virus_total.py  whois.py
clx/parsers/: event_parser.py  splunk_notable_parser.py  windows_event_parser.py  zeek.py
clx/tests/: test_cybert.py  test_dask_fs_reader.py  test_detector_dataset.py  test_detector_utils.py  test_dga_detector.py  test_dns_extractor.py  test_event_parser.py  test_factory.py  test_farsight.py  test_fs_reader.py  test_fs_writer.py  test_ip.py  test_kafka_reader.py  test_kafka_writer.py  test_ml.py  test_mlstats.py  test_mlstats_rzscore.py  test_netflow_workflow.py  test_port_heuristic.py  test_splunk_alert_workflow.py  test_splunk_notable_parser.py  test_stats.py  test_virus_total.py  test_whois.py  test_windows_event_parser.py  test_workflow.py  test_zeek.py
clx/workflow/: netflow_workflow.py  splunk_alert_workflow.py  workflow.py
conda/environments/: clx_dev.yml  clx_dev_cuda10.1.yml  clx_dev_cuda10.2.yml  clx_dev_cuda11.0.yml  clx_dev_cuda11.5.yml
cpp/: CMakeLists.txt
cpp/benchmark/: tokenizer_benchmark.cu
cpp/benchmarks/: CMakeLists.txt  tokenizer_benchmark.cu
cpp/cmake/Modules/: ConfigureGoogleBenchmark.cmake  ConfigureGoogleTest.cmake
cpp/cmake/Templates/: GoogleBenchmark.CMakeLists.txt.cmake  GoogleTest.CMakeLists.txt.cmake
cpp/include/: for_cython.h
cpp/python/: generate_gpu_metadata.py
cpp/src/: basicTokenizer.cu  benchmark_main.cu  data_transfer_utils.cuh  fullTokenizer.cu  hash_utils.cu  hash_utils.cuh  main.cu  tokenizer_utils.cuh  tokenizers.cuh  wordPieceTokenizer.cu
cpp/tests/: CMakeLists.txt  tokenizer_test.cu
docker/: .run_in_rapids.sh  .start_jupyter_run_in_rapids.sh
docs/: Makefile  README.md  make.bat  requirement.txt
docs/source/: 10min-clx.ipynb  api.rst  conf.py  index.rst  intro-clx-asset-classification.ipynb  intro-clx-cybert.ipynb  intro-clx-dga.ipynb  intro-clx-loda-anomaly-detection.ipynb  intro-clx-periodicity-detection.ipynb  intro-clx-phishing-detection.ipynb  intro-clx-predictive-maintenance.ipynb  intro-clx-streamz.ipynb  intro-clx-workflow.ipynb
examples/: FIL_streamz_pipeline.ipynb  run_dga_training.py  train_dga_detector.py
examples/forest_inference/: FIL_custreamz_pipeline.ipynb  xgboost_streamz_pipeline.ipynb  xgboost_training.ipynb
examples/streamz/: Dockerfile  README.md
html/html/: 10min-clx.html  py-modindex.html  search.html  searchindex.js
notebooks/Periodicity-Detection/: CLX_Periodicity_Detection.ipynb  Periodicity_Detection.ipynb
notebooks/Predictive_Maintenance/: Predictive_Maintenance_Sequence_Classifier.ipynb
notebooks/alert_analysis/: Alert_Analysis_with_CLX.ipynb
notebooks/anomalous_behavior_profiling/: anomalous_behavior_profiling_supervised.ipynb
notebooks/anomaly_detection/: FFT_Outlier_Detection.ipynb  LODA_anomaly_detection.ipynb  loda.py
notebooks/cybert/: cybert_example_training.ipynb  cybert_example_training2.ipynb  cybert_log_parsing.ipynb
notebooks/dga_detection/: DGA_Detection.ipynb
notebooks/flair_log_parsing/: FLAIR_DNS_Log_Parsing.ipynb
notebooks/ids_detection/: IDS_using_LODA.ipynb  util.py
notebooks/loda_anomaly_detection/: IDS_using_LODA.ipynb  LODA_anomaly_detection.ipynb  loda.py  util.py
notebooks/network_mapping/: Asset_Classification_Supervised.ipynb  CLX_Supervised_Asset_Classification.ipynb  Network_Mapping_With_RAPIDS_And_CLX.ipynb  Supervised_Asset_Classification.ipynb  custream_n_graph.ipynb
notebooks/phish_detection/: Phishing_Detection_using_Bert_CLX.ipynb
notebooks/phishing_detection/: Phishing_Detection_with_Bert.ipynb
notebooks/pii_detection/: pii_detection_training_example.ipynb
python/: .flake8  .gitattributes  MANIFEST.in  setup.cfg  setup.py  versioneer.py
python/clx/: __init__.py  _version.py  features.py  ip.py
rapidscyber/: docker-compose.yml  pytest.ini
rapidscyber/dns/: dns_extractor.py
rapidscyber/factory/: abstract_factory.py  factory.py  fs_factory.py  kafka_factory.py  nfs_factory.py
rapidscyber/osi/: farsight.py  virus_total.py  whois.py
rapidscyber/parser/: parser_helper.py
rapidscyber/parsers/: event_parser.py  splunk_notable_parser.py
rapidscyber/reader/: file_reader.py  fs_reader.py  kafka_reader.py  nfs_reader.py
rapidscyber/tests/: test_dga_detector.py  test_dns_extractor.py  test_event_parser.py  test_factory.py  test_farsight.py  test_fs_reader.py  test_fs_writer.py  test_ip.py  test_kafka_reader.py  test_kafka_writer.py  test_netflow_workflow.py  test_nfs_reader.py  test_nfs_writer.py  test_rnn_classifier_builder.py  test_rnn_classifier_service.py  test_splunk_notable_parser.py  test_virus_total.py  test_whois.py  test_workflow.py  workflow.yaml
siem_integrations/: Dockerfile  README.md
test/: test_kafka_writer.py  test_nfs_reader.py  test_nfs_writer.py
(+223 files in other folders)
